# documentation-guru

./: README.md  api.py  function_app.py  ingestion.py  pdfs_to_text.py  pyproject.toml
backend/: data_models.py  rag.py
data/: lancedb_docs_embeddings.md  lancedb_docs_fts.md  lancedb_faq.txt
frontend/: .gitignore  app.py
knowledge_base/documentation.lance/_transactions/: 0-9d291a41-5339-40ce-9f98-1dfd70e98ed0.txn  1-7602f24e-2795-4391-82cf-6c0eda699604.txn  10-cca64358-75f1-4e90-a515-995c39458455.txn  100-411eb37a-5702-4325-b1c9-1450b5b6ffa9.txn  101-54ca1ee6-5f92-4864-8265-5748735ae459.txn  102-4e3f7b39-f387-48fc-8caf-5a36ce741931.txn  103-a16d3476-17ad-4603-9cc4-8d6d4297f262.txn  104-29cecde4-1196-4b93-94a2-7d9898b38ad5.txn  105-5f91c9f7-abd8-4a99-85c4-ac19c50a393c.txn  106-ad35ebe8-c038-4686-a3db-cbe68cdb1c8c.txn  107-6ecd25b5-1db9-491d-821e-8e225da426ca.txn  108-318ed067-b2da-4a3d-a205-c48e89be41bc.txn  109-6b830d2a-bc62-4ee5-8037-860acacdc379.txn  11-87fa7694-b680-4c27-a3cf-45bb5cba6272.txn  110-c9dc7e86-016a-436e-bd58-7ad0ee354389.txn  111-f53fe060-988f-4f4a-b854-8667d9548761.txn  112-14a1cb9e-2520-4fba-aa67-b8cc2dea88ed.txn  113-570dc2d1-4492-4264-914c-d76a38fca40a.txn  114-f6519bb4-7fc4-47b9-836f-b943b110c4b0.txn  115-25cccafd-fb28-4a16-9fd8-bd87b401a742.txn  116-de1e9790-7019-47b7-bcde-afedf9788f70.txn  117-c989ba2f-e352-4c97-8b32-cc062458a35a.txn  118-6033021d-403e-47de-a101-b697f2838691.txn  119-81e5ad25-9fd1-4169-99f0-a69accb5df29.txn  12-cdffab42-32f2-403c-972a-709ce905d80f.txn  (+109 more)
mcp_servers/: knowledge_server.py  tts_server.py
(+134 files in other folders)
