[project]
name = "14-pydanticai-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.1.0",
    "lancedb>=0.26.1",
    "pandas>=2.3.3",
    "pydantic-ai>=1.41.0",
    "pypdf>=6.6.0",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]
